bzr-svn 0.4.9	UNRELEASED

  FEATURES

   * Set revision properties when possible.

   * Avoid doing two branch property lookups when getting revision metadata.

   * Use caching revision graph.

  BUGS
  
   * Fix compatibility with bzr 1.3.

   * Be a bit quieter with messages about experimental mappings. (#162496)

  INTERNALS

   * Allow multiple mappings to be available at the same time.

bzr-svn 0.4.8	2008-03-11

  BUG FIXES

   * Fix compatibility with Bazaar 1.2. (#196002)

   * Don't provide find_repository() implementation. (#193814)

   * Allow specifying path inside repository in svn-branching-scheme. (#190331)

   * Support using platform-specific auth providers when available.

   * Fix path to URL conversion for Windows NT. (#188233)

   * Fix performance regression in sqlite queries.

  FEATURES

   * Add progress bar to fetch initialization code. 

   * Add another progress bar to the branch detection code.

   * Add -d option to the svn-push command. 

bzr-svn 0.4.7	2008-02-01
 
  FEATURES

   * Implement Repository.find_branches(). (#178108)

   * Warn about location when initializing Subversion repository cache.

  BUGS

   * Fix opening unicode file names during fetch. (#162368)

   * Consistently handle unicode characters. (#129334, #164381)

   * Handle unicode strings appropriately when reading working tree 
     inventory. (#183853)

   * Fix too strict indexing in old existing cache databases. (#165136)

   * Handle children of replaced directories, themselve replaced correctly. (#181790)

   * Handle corner cases tracking branches. (#184457)

   * Avoid errors about invalid branching paths unless the branching scheme 
     was specified explicitly.

   * Change default format to rich-root-pack. (#187008)

   * Fix handling of weird file change after replacing from other branch.
     (#186876)

bzr-svn 0.4.6	2008-01-08

  PERFORMANCE
  
   * Remember where revids have already been detected. Makes incremental